--- a/ientityrecord.html
+++ b/ientityrecord.html
@@ -52,6 +52,9 @@
 							<a class="source" href="isyncstate.html">
 								ISyncState.cs
 							</a>
+							<a class="source" href="typeextensions.html">
+								TypeExtensions.cs
+							</a>
 							<a class="source" href="model/component.html">
 								Model\Component.cs
 							</a>
@@ -229,7 +232,7 @@ namespace ComponentKit {
 
 						</td>
 						<td class="code">
-							<pre><code class='prettyprint'>        void Notify&lt;T&gt;(string message, T data);
+							<pre><code class='prettyprint'>        void Notify&lt;TData&gt;(string message, TData data);
     }
 }
 
