--- a/ientityrecordcollection.html
+++ b/ientityrecordcollection.html
@@ -52,6 +52,9 @@
 							<a class="source" href="isyncstate.html">
 								ISyncState.cs
 							</a>
+							<a class="source" href="typeextensions.html">
+								TypeExtensions.cs
+							</a>
 							<a class="source" href="model/component.html">
 								Model\Component.cs
 							</a>
@@ -99,6 +102,8 @@
 							</div>
 							<h3>TL;DR..</h3>
 
+<p>Too bad, because this part is missing right now ^_^</p>
+
 						</td>
 						<td class="code">
 							<pre><code class='prettyprint'>
@@ -109,19 +114,6 @@
 						<td class="docs">
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_2">&#182;</a>
-							</div>
-							<p>Too bad, because this part is missing right now ^_^</p>
-
-						</td>
-						<td class="code">
-							<pre><code class='prettyprint'>
-</code></pre>
-						</td>
-					</tr>
-					<tr id="section_3">
-						<td class="docs">
-							<div class="pilwrap">
-								<a class="pilcrow" href="#section_3">&#182;</a>
 							</div>
 							<h2>Source</h2>
 
@@ -134,10 +126,10 @@ namespace ComponentKit {
 </code></pre>
 						</td>
 					</tr>
-					<tr id="section_4">
+					<tr id="section_3">
 						<td class="docs">
 							<div class="pilwrap">
-								<a class="pilcrow" href="#section_4">&#182;</a>
+								<a class="pilcrow" href="#section_3">&#182;</a>
 							</div>
 							<p>Defines a collection of unique entities.</p>
 
@@ -147,10 +139,10 @@ namespace ComponentKit {
 </code></pre>
 						</td>
 					</tr>
-					<tr id="section_5">
+					<tr id="section_4">
 						<td class="docs">
 							<div class="pilwrap">
-								<a class="pilcrow" href="#section_5">&#182;</a>
+								<a class="pilcrow" href="#section_4">&#182;</a>
 							</div>
 							<p>Determines whether an entity is registered in the registry.</p>
 
@@ -161,10 +153,10 @@ namespace ComponentKit {
 </code></pre>
 						</td>
 					</tr>
-					<tr id="section_6">
+					<tr id="section_5">
 						<td class="docs">
 							<div class="pilwrap">
-								<a class="pilcrow" href="#section_6">&#182;</a>
+								<a class="pilcrow" href="#section_5">&#182;</a>
 							</div>
 							<h3>Manipulation</h3>
 
@@ -174,10 +166,10 @@ namespace ComponentKit {
 </code></pre>
 						</td>
 					</tr>
-					<tr id="section_7">
+					<tr id="section_6">
 						<td class="docs">
 							<div class="pilwrap">
-								<a class="pilcrow" href="#section_7">&#182;</a>
+								<a class="pilcrow" href="#section_6">&#182;</a>
 							</div>
 							<p>Registers an entity.</p>
 
@@ -187,10 +179,10 @@ namespace ComponentKit {
 </code></pre>
 						</td>
 					</tr>
-					<tr id="section_8">
+					<tr id="section_7">
 						<td class="docs">
 							<div class="pilwrap">
-								<a class="pilcrow" href="#section_8">&#182;</a>
+								<a class="pilcrow" href="#section_7">&#182;</a>
 							</div>
 							<p>Unregisters an entity and returns <code>true</code> if it was successfully dropped.</p>
 
@@ -200,23 +192,23 @@ namespace ComponentKit {
 </code></pre>
 						</td>
 					</tr>
-					<tr id="section_9">
+					<tr id="section_8">
 						<td class="docs">
 							<div class="pilwrap">
-								<a class="pilcrow" href="#section_9">&#182;</a>
+								<a class="pilcrow" href="#section_8">&#182;</a>
 							</div>
 							<p>Attaches the specified component to an entity.</p>
 
 						</td>
 						<td class="code">
-							<pre><code class='prettyprint'>        void Add(IEntityRecord entity, IComponent component);
+							<pre><code class='prettyprint'>        bool Add(IEntityRecord entity, IComponent component);
 </code></pre>
 						</td>
 					</tr>
-					<tr id="section_10">
+					<tr id="section_9">
 						<td class="docs">
 							<div class="pilwrap">
-								<a class="pilcrow" href="#section_10">&#182;</a>
+								<a class="pilcrow" href="#section_9">&#182;</a>
 							</div>
 							<p>Dettaches the specified component from an entity if possible, and returns <code>true</code> if it was successfully removed.</p>
 
@@ -227,10 +219,10 @@ namespace ComponentKit {
 </code></pre>
 						</td>
 					</tr>
-					<tr id="section_11">
+					<tr id="section_10">
 						<td class="docs">
 							<div class="pilwrap">
-								<a class="pilcrow" href="#section_11">&#182;</a>
+								<a class="pilcrow" href="#section_10">&#182;</a>
 							</div>
 							<h3>Events</h3>
 
@@ -240,10 +232,10 @@ namespace ComponentKit {
 </code></pre>
 						</td>
 					</tr>
-					<tr id="section_12">
+					<tr id="section_11">
 						<td class="docs">
 							<div class="pilwrap">
-								<a class="pilcrow" href="#section_12">&#182;</a>
+								<a class="pilcrow" href="#section_11">&#182;</a>
 							</div>
 							<p>Occurs when a new entity is registered.</p>
 
@@ -253,10 +245,10 @@ namespace ComponentKit {
 </code></pre>
 						</td>
 					</tr>
-					<tr id="section_13">
+					<tr id="section_12">
 						<td class="docs">
 							<div class="pilwrap">
-								<a class="pilcrow" href="#section_13">&#182;</a>
+								<a class="pilcrow" href="#section_12">&#182;</a>
 							</div>
 							<p>Occurs when an entity is unregistered.</p>
 
@@ -267,12 +259,25 @@ namespace ComponentKit {
 </code></pre>
 						</td>
 					</tr>
+					<tr id="section_13">
+						<td class="docs">
+							<div class="pilwrap">
+								<a class="pilcrow" href="#section_13">&#182;</a>
+							</div>
+							<h3>Triggers</h3>
+
+						</td>
+						<td class="code">
+							<pre><code class='prettyprint'>
+</code></pre>
+						</td>
+					</tr>
 					<tr id="section_14">
 						<td class="docs">
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_14">&#182;</a>
 							</div>
-							<h3>Triggers</h3>
+							<p>Triggers allow you to intercept components that have changed state during a synchronization operation.</p>
 
 						</td>
 						<td class="code">
@@ -285,19 +290,6 @@ namespace ComponentKit {
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_15">&#182;</a>
 							</div>
-							<p>Triggers allow you to intercept components that have changed state during a synchronization operation.</p>
-
-						</td>
-						<td class="code">
-							<pre><code class='prettyprint'>
-</code></pre>
-						</td>
-					</tr>
-					<tr id="section_16">
-						<td class="docs">
-							<div class="pilwrap">
-								<a class="pilcrow" href="#section_16">&#182;</a>
-							</div>
 							<p>Adds a trigger that fires on components that matches a predicate.</p>
 
 						</td>
@@ -306,10 +298,10 @@ namespace ComponentKit {
 </code></pre>
 						</td>
 					</tr>
-					<tr id="section_17">
+					<tr id="section_16">
 						<td class="docs">
 							<div class="pilwrap">
-								<a class="pilcrow" href="#section_17">&#182;</a>
+								<a class="pilcrow" href="#section_16">&#182;</a>
 							</div>
 							<p>Clears out an existing trigger.</p>
 
@@ -320,16 +312,30 @@ namespace ComponentKit {
 </code></pre>
 						</td>
 					</tr>
-					<tr id="section_18">
+					<tr id="section_17">
 						<td class="docs">
 							<div class="pilwrap">
-								<a class="pilcrow" href="#section_18">&#182;</a>
+								<a class="pilcrow" href="#section_17">&#182;</a>
 							</div>
 							<h3>Component retrieval</h3>
 
 						</td>
 						<td class="code">
 							<pre><code class='prettyprint'>
+</code></pre>
+						</td>
+					</tr>
+					<tr id="section_18">
+						<td class="docs">
+							<div class="pilwrap">
+								<a class="pilcrow" href="#section_18">&#182;</a>
+							</div>
+							<p>Returns a component of the specified type if it is attached to the entity.</p>
+
+						</td>
+						<td class="code">
+							<pre><code class='prettyprint'>        TComponent GetComponent&lt;TComponent&gt;(IEntityRecord entity) 
+            where TComponent : class, IComponent;
 </code></pre>
 						</td>
 					</tr>
@@ -342,7 +348,8 @@ namespace ComponentKit {
 
 						</td>
 						<td class="code">
-							<pre><code class='prettyprint'>        T GetComponent&lt;T&gt;(IEntityRecord entity) where T : class, IComponent;
+							<pre><code class='prettyprint'>        TComponent GetComponent&lt;TComponent&gt;(IEntityRecord entity, TComponent component) 
+            where TComponent : class, IComponent;
 </code></pre>
 						</td>
 					</tr>
@@ -351,11 +358,13 @@ namespace ComponentKit {
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_20">&#182;</a>
 							</div>
-							<p>Returns a component of the specified type if it is attached to the entity.</p>
+							<p>Returns any component that is either a subclass of, or is, the specified type if it is attached to the entity.</p>
 
 						</td>
 						<td class="code">
-							<pre><code class='prettyprint'>        T GetComponent&lt;T&gt;(IEntityRecord entity, T component) where T : class, IComponent;
+							<pre><code class='prettyprint'>        TComponent GetComponent&lt;TComponent&gt;(IEntityRecord entity, TComponent component, bool allowingDerivedTypes) 
+            where TComponent : class, IComponent;
+
 </code></pre>
 						</td>
 					</tr>
@@ -363,20 +372,6 @@ namespace ComponentKit {
 						<td class="docs">
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_21">&#182;</a>
-							</div>
-							<p>Returns any component that is either a subclass of, or is, the specified type if it is attached to the entity.</p>
-
-						</td>
-						<td class="code">
-							<pre><code class='prettyprint'>        T GetComponent&lt;T&gt;(IEntityRecord entity, T component, bool allowingDerivedTypes) where T : class, IComponent;
-
-</code></pre>
-						</td>
-					</tr>
-					<tr id="section_22">
-						<td class="docs">
-							<div class="pilwrap">
-								<a class="pilcrow" href="#section_22">&#182;</a>
 							</div>
 							<p>Returns a component of the specified type if it is attached to the entity.</p>
 
@@ -386,10 +381,10 @@ namespace ComponentKit {
 </code></pre>
 						</td>
 					</tr>
-					<tr id="section_23">
+					<tr id="section_22">
 						<td class="docs">
 							<div class="pilwrap">
-								<a class="pilcrow" href="#section_23">&#182;</a>
+								<a class="pilcrow" href="#section_22">&#182;</a>
 							</div>
 							<p>If <code>allowingDerivedTypes</code> is <code>true</code>, returns any component that is either a subclass of, or is, the specified type if it is attached to the entity.</p>
 
@@ -400,10 +395,10 @@ namespace ComponentKit {
 </code></pre>
 						</td>
 					</tr>
-					<tr id="section_24">
+					<tr id="section_23">
 						<td class="docs">
 							<div class="pilwrap">
-								<a class="pilcrow" href="#section_24">&#182;</a>
+								<a class="pilcrow" href="#section_23">&#182;</a>
 							</div>
 							<p>Returns all the components that are attached to the entity.</p>
 
@@ -413,10 +408,10 @@ namespace ComponentKit {
 </code></pre>
 						</td>
 					</tr>
-					<tr id="section_25">
+					<tr id="section_24">
 						<td class="docs">
 							<div class="pilwrap">
-								<a class="pilcrow" href="#section_25">&#182;</a>
+								<a class="pilcrow" href="#section_24">&#182;</a>
 							</div>
 							<p>Returns all the components that are attached to the specified entity.</p>
 
@@ -429,10 +424,10 @@ namespace ComponentKit {
 </code></pre>
 						</td>
 					</tr>
-					<tr id="section_26">
+					<tr id="section_25">
 						<td class="docs">
 							<div class="pilwrap">
-								<a class="pilcrow" href="#section_26">&#182;</a>
+								<a class="pilcrow" href="#section_25">&#182;</a>
 							</div>
 							<p>Copyright 2012 Jacob H. Hansen.</p>
 
