--- a/typeextensions.html
+++ b/typeextensions.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>ComponentKit.cs</title>
+	<title>TypeExtensions.cs</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 	<link href="nocco.css" rel="stylesheet" media="all" type="text/css" />
 	<script src="prettify.js" type="text/javascript"></script>
@@ -89,7 +89,7 @@
 			<thead>
 				<tr>
 					<th class="docs">
-						<h1>ComponentKit.cs</h1>
+						<h1>TypeExtensions.cs</h1>
 					</th>
 					<th class="code"></th>
 				</tr>
@@ -100,8 +100,9 @@
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_1">&#182;</a>
 							</div>
-							<p>Copyright 2012 Jacob H. Hansen.<br />
-<em>This project and all source code is subject to the terms and conditions defined in the <a href="https://github.com/shrt/ComponentKit/blob/master/LICENSE">'License'</a>.</em></p>
+							<h3>TL;DR..</h3>
+
+<p>Too bad, because this part is missing right now ^_^</p>
 
 						</td>
 						<td class="code">
@@ -114,22 +115,85 @@
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_2">&#182;</a>
 							</div>
-							<p><strong>ComponentKit</strong> provides a set of <strong>C#</strong> interfaces and classes that are useful when you need to maintain an
-<strong>in-memory database</strong> of <strong>entity</strong> composites.</p>
+							<h2>Source</h2>
 
-<p>Features include: <strong>triggers</strong>, for handling the processing of components, <strong>dependency injection</strong>, and some
-very basic <strong>inter-component messaging</strong>.</p>
+						</td>
+						<td class="code">
+							<pre><code class='prettyprint'>using System;
+using System.Text;
 
-<h3>How does it work?</h3>
+namespace ComponentKit {
+    internal static class TypeExtensions {
+</code></pre>
+						</td>
+					</tr>
+					<tr id="section_3">
+						<td class="docs">
+							<div class="pilwrap">
+								<a class="pilcrow" href="#section_3">&#182;</a>
+							</div>
+							<blockquote>
+  <p>See http://stackoverflow.com/a/401824/144433</p>
+</blockquote>
 
-<p>The <em>entity/component</em> model is popularly used in game programming, and the scripting in <a href="http://www.unity3d.com">Unity3D</a> 
-is a great example of how it works in action.</p>
+						</td>
+						<td class="code">
+							<pre><code class='prettyprint'>        public static string GetPrettyName(this Type type) {
+            bool isArray = false;
 
-<p>Further <strong>documentation</strong> can be found through the button at the upper-right corner of this page.
-All documentation has been generated straight from the source, using <a href="http://dontangg.github.com/nocco/">Nocco</a>.</p>
+            if (type.IsArray) {
+                type = type.GetElementType();
 
-<p>The complete <a href="http://github.com/shrt/ComponentKit">source for ComponentKit</a> can be found at github. 
-Do with it what you want!</p>
+                isArray = true;
+            }
+
+            if (type.IsGenericParameter) {
+                return type.Name;
+            }
+
+            if (!type.IsGenericType) {
+                return type.Name;
+            }
+
+            string name = type.Name;
+            
+            StringBuilder output = new StringBuilder();
+
+            output.AppendFormat(&quot;{0}&quot;, name.Substring(0, name.IndexOf(&quot;`&quot;)));
+            output.Append(&#39;&lt;&#39;);
+
+            bool first = true;
+
+            foreach (Type typeArgument in type.GetGenericArguments()) {
+                if (first) {
+                    first = false;
+                } else {
+                    output.Append(&quot;, &quot;);
+                }
+
+                output.Append(typeArgument.GetPrettyName());
+            }
+
+            output.Append(&#39;&gt;&#39;);
+
+            if (isArray) {
+                output.Append(&quot;[]&quot;);
+            }
+
+            return output.ToString();
+        }
+    }
+}
+
+</code></pre>
+						</td>
+					</tr>
+					<tr id="section_4">
+						<td class="docs">
+							<div class="pilwrap">
+								<a class="pilcrow" href="#section_4">&#182;</a>
+							</div>
+							<p>Copyright 2012 Jacob H. Hansen.</p>
 
 						</td>
 						<td class="code">
